force-app/main/default/objects/ClaimParticipant/fields/CS_AccountHolderDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_AccountHolderDocumentNumber__c</fullName>
    <label>Numero de Documento Titular de la Cuenta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>