force-app/main/default/objects/ClaimParticipant/fields/CS_Address__c.field-meta.xml
<CustomField>
    <fullName>CS_Address__c</fullName>
    <label>Direccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>