force-app/main/default/objects/ClaimParticipant/fields/CS_BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_BankAccountNumber__c</fullName>
    <description>Numero de cuenta Bancaria.</description>
    <label>Numero de Cuenta</label>
    <type>TextArea</type>
</CustomField>