force-app/main/default/objects/ClaimParticipant/fields/CS_BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>CS_BankAccountType__c</fullName>
    <description>Tipo de cuenta Bancaria.</description>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahorros</fullName>
            </value>
            <value>
                <fullName>Corriente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>