force-app/main/default/objects/ClaimParticipant/fields/CS_BankingEntity__c.field-meta.xml
<CustomField>
    <fullName>CS_BankingEntity__c</fullName>
    <description>Entidad Bancaria.</description>
    <label>Entidad Bancaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>52</fullName>
                <label>Av Villas</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Banco Agrario</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>Banco Caja Social (Colmena)</label>
            </value>
            <value>
                <fullName>66</fullName>
                <label>Banco Cooperativo Coopcentral</label>
            </value>
            <value>
                <fullName>558</fullName>
                <label>Banco Credifinanciera S.A.</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Banco de Bogota (Megabanco)</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>Banco de las Microfinanzas - Bancamia S.A.</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Banco de Occidente(Banco Unión-Aliadas-Interbanco)</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Banco Falabella</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>Banco Finandina S.A.</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Bancolombia</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>Bancoomeva</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>Banco Pichincha S.A.</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Banco Popular</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>Banco Santander de Negocios Colombia S.A.</label>
            </value>
            <value>
                <fullName>069</fullName>
                <label>Banco Serfinanza S.A.</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Banco W S.A</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>BBVA (Banco Granahorrar)</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Citibank</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Colpatria (Scotiabank)</label>
            </value>
            <value>
                <fullName>370</fullName>
                <label>Coltefinanciera S.A.</label>
            </value>
            <value>
                <fullName>292</fullName>
                <label>Confiar</label>
            </value>
            <value>
                <fullName>289</fullName>
                <label>Cooperativa Financiera Cotrafa</label>
            </value>
            <value>
                <fullName>283</fullName>
                <label>Cooperativa Financiera de Antioquia</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Davivienda(Bancafe-Bansuperior-Granbanco)</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>Financiera Juriscoop</label>
            </value>
            <value>
                <fullName>303</fullName>
                <label>Giros y Finanzas CF-Banco Unión</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>GNB Sudameris (GNB Colombia-HSBC-Tequendama)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Helm Bank</label>
            </value>
            <value>
                <fullName>637</fullName>
                <label>Iris</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>