force-app/main/default/objects/ClaimParticipant/fields/CS_City__c.field-meta.xml
<CustomField>
    <fullName>CS_City__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>