force-app/main/default/objects/ClaimParticipant/fields/CS_Deparment__c.field-meta.xml
<CustomField>
    <fullName>CS_Deparment__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>