force-app/main/default/objects/ClaimParticipant/fields/CS_DestinationAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_DestinationAccountNumber__c</fullName>
    <description>Numero de cuenta Destino.</description>
    <label>Numero de Cuenta Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>