force-app/main/default/objects/ClaimParticipant/fields/CS_DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_DocumentNumber__c</fullName>
    <description>Numero de Identificacion de un solicitante.</description>
    <label>Numero de Documento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>