force-app/main/default/objects/ClaimParticipant/fields/CS_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>CS_DocumentType__c</fullName>
    <description>Campo que almacena los tipos de documentos en una reclamación</description>
    <label>Tipo Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cédula de ciudadanía</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cédula de extranjería</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tarjeta de identificación</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Registro civil</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>NIT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>