force-app/main/default/objects/ClaimParticipant/fields/CS_DocumentTypeAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>CS_DocumentTypeAccountHolder__c</fullName>
    <label>Tipo Documento Titular de la Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CS_PersonType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cédula de ciudadanía</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cédula de extranjería</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tarjeta de identificación</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Registro civil</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>NIT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>