force-app/main/default/objects/ClaimParticipant/fields/CS_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>