force-app/main/default/objects/ClaimParticipant/fields/CS_FirstLastNameOfAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>CS_FirstLastNameOfAccountHolder__c</fullName>
    <label>Primer Apellido Titular de la Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>