force-app/main/default/objects/ClaimParticipant/fields/CS_FirstName__c.field-meta.xml
<CustomField>
    <fullName>CS_FirstName__c</fullName>
    <description>Primer nombre del solicitante.</description>
    <label>Primer Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>