force-app/main/default/objects/ClaimParticipant/fields/CS_FirstNameOfAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>CS_FirstNameOfAccountHolder__c</fullName>
    <label>Primer Nombre Titular de la Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>