force-app/main/default/objects/ClaimParticipant/fields/CS_InsuredGroup__c.field-meta.xml
<CustomField>
    <fullName>CS_InsuredGroup__c</fullName>
    <label>Grupo Asegurado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Afiliado</fullName>
            </value>
            <value>
                <fullName>Visitante</fullName>
            </value>
            <value>
                <fullName>Deudor</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>