force-app/main/default/objects/ClaimParticipant/fields/CS_LastName__c.field-meta.xml
<CustomField>
    <fullName>CS_LastName__c</fullName>
    <description>Primer apellido del solicitante.</description>
    <label>Primer Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>