force-app/main/default/objects/ClaimParticipant/fields/CS_MaskDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_MaskDocumentNumber__c</fullName>
    <formula>IF(!ISBLANK(CS_BankAccountNumber__c), 
    &apos;XXXXXXXX&apos; + RIGHT(CS_BankAccountNumber__c,4),
    IF(!ISBLANK(CS_DestinationAccountNumber__c), &apos;XXXXXXXX&apos; + RIGHT(CS_DestinationAccountNumber__c, 4),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de cuenta enmascarado</label>
    <type>Text</type>
</CustomField>