force-app/main/default/objects/ClaimParticipant/fields/CS_NameorSocialReason__c.field-meta.xml
<CustomField>
    <fullName>CS_NameorSocialReason__c</fullName>
    <description>Nombre o razon social del tomador en una indemnizacion.</description>
    <label>Nombre o Razon Social</label>
    <length>150</length>
    <type>Text</type>
</CustomField>