force-app/main/default/objects/ClaimParticipant/fields/CS_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>CS_PaymentMethod__c</fullName>
    <description>Se listan medios de pago para una reclamacion.</description>
    <label>Medio de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferencia bancaria</fullName>
            </value>
            <value>
                <fullName>Nequi</fullName>
            </value>
            <value>
                <fullName>Daviplata</fullName>
            </value>
            <value>
                <fullName>Billetera Tpaga</fullName>
            </value>
            <value>
                <fullName>Efecty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>