force-app/main/default/objects/ClaimParticipant/fields/CS_PersonType__c.field-meta.xml
<CustomField>
    <fullName>CS_PersonType__c</fullName>
    <description>Campo que almacena tipo persona en reclamación</description>
    <label>Tipo Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>