force-app/main/default/objects/ClaimParticipant/fields/CS_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_PhoneNumber__c</fullName>
    <label>Numero de Telefono</label>
    <type>Phone</type>
</CustomField>