force-app/main/default/objects/ClaimParticipant/fields/CS_RolesBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>CS_RolesBeneficiary__c</fullName>
    <label>Roles Beneficiario</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>Compañera(o) Permanente</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Hijo(a)</fullName>
            </value>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Hermano(s)</fullName>
            </value>
            <value>
                <fullName>Primo(a)</fullName>
            </value>
            <value>
                <fullName>Hijastro(a)</fullName>
            </value>
            <value>
                <fullName>Abuelo(a)</fullName>
            </value>
            <value>
                <fullName>Tio(a)</fullName>
            </value>
            <value>
                <fullName>Cuñado(a)</fullName>
            </value>
            <value>
                <fullName>Sobrino(a)</fullName>
            </value>
            <value>
                <fullName>Otro Parentesco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>