force-app/main/default/objects/ClaimParticipant/fields/CS_SecondLastName__c.field-meta.xml
<CustomField>
    <fullName>CS_SecondLastName__c</fullName>
    <description>Segundo apellido solicitante.</description>
    <label>Segundo Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>