force-app/main/default/objects/ClaimParticipant/fields/CS_SecondLastNameofAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>CS_SecondLastNameofAccountHolder__c</fullName>
    <label>Segundo Apellido Titular de la Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>