force-app/main/default/objects/ClaimParticipant/fields/CS_SecondName__c.field-meta.xml
<CustomField>
    <fullName>CS_SecondName__c</fullName>
    <description>Segundo nombre solicitante.</description>
    <label>Segundo Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>