force-app/main/default/objects/ClaimParticipant/fields/CS_SecondNameOfAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>CS_SecondNameOfAccountHolder__c</fullName>
    <label>Segundo Nombre Titular de la Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>