force-app/main/default/objects/ClaimParticipant/fields/IsClaimant__c.field-meta.xml
<CustomField>
    <fullName>IsClaimant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que valida si es un reclamante</description>
    <label>Es reclamante</label>
    <type>Checkbox</type>
</CustomField>