force-app/main/default/objects/ClaimParticipant/fields/OtherRoles__c.field-meta.xml
<CustomField>
    <fullName>OtherRoles__c</fullName>
    <description>Campo que almacena otros roles de la reclamación</description>
    <label>Otro Parentesco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>